css/less/misc.less
//
// Misc
// @version 1.4
// @since 1.0
//

@import "mixins.less";

body * {
	-ms-word-wrap: break-word; 
	word-wrap: break-word;
}

a {
  .ease_in();

  &:hover {
    text-decoration: none;
  }
}

img {
	max-width: 100%;
	height: auto;
}

/*
 * override Bootstrap span class that was
 * causing issues with some post_class() tags 
 */
[class*="span"].post {
    float: none;
    margin-left: 0;
}

input[type="submit"] {
    color: #ffffff;
    background-color: @link-color;
    border-color: @link-color;
    display: inline-block;
    padding: 6px 12px;
    margin-bottom: 0;
    font-size: 14px;
    font-weight: normal;
    line-height: 1.428571429;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    cursor: pointer;
    border: 1px solid transparent;
    border-radius: 4px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;

    &:hover {
      color: #ffffff;
      background-color: @link-hover-color;
      border-color: @link-hover-color;
    }

    &:focus {
      outline: 1px dotted #666;
    }

} // input[type="submit"]

input[type="text"] {
	width: 95%;
}

table {

  .label {
    display: block;
    border-radius: 0;
    background: #f1f1f1;
    color: #444;
  }

  td.label a {
    color: #444;
    text-shadow: none;
  }

}


.fademe img,
a img {
	opacity: 1;	
	.ease_in();

    &:hover {
      opacity: 0.5;
    }

}

code {
  white-space: inherit;
}

.form-allowed-tags code {
	float: left; 
	margin: 8px 0 12px 0;
}

